--- a/travis.yml
+++ b/travis.yml
@@ -17,53 +17,53 @@
 language: cpp
 
 matrix:
-  include:
-    - os: linux
-      dist: trusty
-      sudo: required
-      env: MINICONDA="2"
-    - os: linux
-      dist: trusty
-      sudo: required
-      env: MINICONDA="3"
-    - os: osx
-      osx_image: xcode7.2
-      env: MINICONDA="2"
-    - os: osx
-      osx_image: xcode7.2
-      env: MINICONDA="3"
+    include:
+        -   os: linux
+            dist: trusty
+            sudo: required
+            env: MINICONDA="2"
+        -   os: linux
+            dist: trusty
+            sudo: required
+            env: MINICONDA="3"
+        -   os: osx
+            osx_image: xcode7.2
+            env: MINICONDA="2"
+        -   os: osx
+            osx_image: xcode7.2
+            env: MINICONDA="3"
 
 install:
-  - git clone https://gist.github.com/319558c83d145620a6d4decdcadfbfb0.git config-travis
-  - cd config-travis
-  - source config.sh
-  - cd ..
-  
+    - git clone https://gist.github.com/319558c83d145620a6d4decdcadfbfb0.git config-travis
+    - cd config-travis
+    - source config.sh
+    - cd ..
+    
 script:
-  - cd conda
-  - export ANACONDA_BUILD_FLAGS="--no-test"
-  - bash build.sh
-  - cd ..
+    - cd conda
+    - export ANACONDA_BUILD_FLAGS="--no-test"
+    - bash build.sh
+    - cd ..
 
 after_success:
-  - if [[ "$TRAVIS_OS_NAME" = "osx" ]]; then
-      rm test/test_about.py;
-    fi
-  - cd conda
-  - bash install.sh
-  - cd ..
-  - pkgtk authors
-  - cd conda
-  - unset ANACONDA_BUILD_FLAGS
-  - export BUILD_TARGETS="python-pkgtk"
-  - bash build.sh
-  - cd ..;
-  - if [[ "$TRAVIS_OS_NAME" = "linux" ]] && [[ "$MINICONDA" = "2" ]]; then
-      coveralls --config_file=.coveragerc;
-    fi
-  - export ANACONDA_UPLOAD_OPTIONS="--force"
-  - if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ ! -z $ANACONDA_USERNAME ]]; then
-      cd conda;
-      bash upload.sh;
-      cd ..;
-    fi
+    -   if [[ "$TRAVIS_OS_NAME" = "osx" ]]; then
+            rm test/test_about.py;
+        fi
+    -   cd conda
+    -   bash install.sh
+    -   cd ..
+    -   pkgtk authors
+    -   cd conda
+    -   unset ANACONDA_BUILD_FLAGS
+    -   export ANACONDA_BUILD_RECIPES="python-pkgtk"
+    -   bash build.sh
+    -   cd ..;
+    -   if [[ "$TRAVIS_OS_NAME" = "linux" ]] && [[ "$MINICONDA" = "2" ]]; then
+            coveralls --config_file=.coveragerc;
+        fi
+    -   export ANACONDA_UPLOAD_FLAGS="--force"
+    -   if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ ! -z $ANACONDA_USERNAME ]]; then
+            cd conda;
+            bash upload.sh;
+            cd ..;
+        fi
