--- a/travis.yml
+++ b/travis.yml
@@ -17,16 +17,15 @@ env:
     - RECIPE=py-run
     - RECIPE=libboost
 
+os:
+    - linux
+    - osx
+
 matrix:
     include:
         -   os: linux
             dist: trusty
             sudo: required
-        -   os: linux
-            dist: trusty
-            sudo: required
-            services:
-                - docker
         -   os: osx
             osx_image: xcode7.3
 
