--- a/bin/conda/boost-suite/meta.yaml
+++ b/bin/conda/boost-suite/meta.yaml
@@ -56,7 +56,7 @@ outputs:
   - files:
       - lib/libboost_atomic*     [not win]
       - Library\lib\libboost_atomic* [win]
-      - Library\bin\libboost_atomic* [win]
+      - Library\bin\boost_atomic* [win]
     name: libboost_atomic
   - files:
       - include/boost/atomic.hpp       [not win]
@@ -76,7 +76,7 @@ outputs:
   - files:
       - lib/libboost_chrono*     [not win]
       - Library\lib\libboost_chrono* [win]
-      - Library\bin\libboost_chrono* [win]
+      - Library\bin\boost_chrono* [win]
     name: libboost_chrono
     requirements:
       run:
@@ -98,7 +98,7 @@ outputs:
   - files:
       - lib/libboost_container*     [not win]
       - Library\lib\libboost_container* [win]
-      - Library\bin\libboost_container* [win]
+      - Library\bin\boost_container* [win]
     name: libboost_container
   - files:
       - include/boost/container          [not win]
@@ -114,7 +114,7 @@ outputs:
   - files:
       - lib/libboost_python*     [not win]
       - Library\lib\libboost_python* [win]
-      - Library\bin\libboost_python* [win]
+      - Library\bin\boost_python* [win]
     name: libboost_python
     requirements:
       - python
@@ -137,7 +137,7 @@ outputs:
   - files:
       - lib/libboost_context*     [not win]
       - Library\lib\libboost_context* [win]
-      - Library\bin\libboost_context* [win]
+      - Library\bin\boost_context* [win]
     name: libboost_context
   - files:
       - include/boost/context          [not win]
@@ -153,7 +153,7 @@ outputs:
   - files:
       - lib/libboost_coroutine*     [not win]
       - Library\lib\libboost_coroutine* [win]
-      - Library\bin\libboost_coroutine* [win]
+      - Library\bin\boost_coroutine* [win]
     name: libboost_coroutine
     requirements:
       run:
@@ -179,7 +179,7 @@ outputs:
   - files:
       - lib/libboost_date_time*     [not win]
       - Library\lib\libboost_date_time* [win]
-      - Library\bin\libboost_date_time* [win]
+      - Library\bin\boost_date_time* [win]
     name: libboost_date_time
   - files:
       - include/boost/date_time.hpp      [not win]
@@ -197,7 +197,7 @@ outputs:
   - files:
       - lib/libboost_filesystem*     [not win]
       - Library\lib\libboost_filesystem* [win]
-      - Library\bin\libboost_filesystem* [win]
+      - Library\bin\boost_filesystem* [win]
     name: libboost_filesystem
     requirements:
       run:
@@ -219,7 +219,7 @@ outputs:
   - files:
       - lib/libboost_graph*     [not win]
       - Library\lib\libboost_graph* [win]
-      - Library\bin\libboost_graph* [win]
+      - Library\bin\boost_graph* [win]
     name: libboost_graph
     requirements:
       run:
@@ -241,7 +241,7 @@ outputs:
   - files:
       - lib/libboost_iostreams*     [not win]
       - Library\lib\libboost_iostreams* [win]
-      - Library\bin\libboost_iostreams* [win]
+      - Library\bin\boost_iostreams* [win]
     name: libboost_iostreams
   - files:
       - include/boost/iostreams          [not win]
@@ -257,7 +257,7 @@ outputs:
   - files:
       - lib/libboost_locale*     [not win]
       - Library\lib\libboost_locale* [win]
-      - Library\bin\libboost_locale* [win]
+      - Library\bin\boost_locale* [win]
     name: libboost_locale
     requirements:
       run:
@@ -281,7 +281,7 @@ outputs:
   - files:
       - lib/libboost_log*     [not win]
       - Library\lib\libboost_log* [win]
-      - Library\bin\libboost_log* [win]
+      - Library\bin\boost_log* [win]
     name: libboost_log
     requirements:
       run:
@@ -307,7 +307,7 @@ outputs:
   - files:
       - lib/libboost_math*     [not win]
       - Library\lib\libboost_math* [win]
-      - Library\bin\libboost_math* [win]
+      - Library\bin\boost_math* [win]
     name: libboost_math
   - files:
       - include/boost/math              [not win]
@@ -327,7 +327,7 @@ outputs:
   - files:
       - lib/libboost_program_options*      [not win]
       - Library\lib\libboost_program_options*  [win]
-      - Library\bin\libboost_program_options*  [win]
+      - Library\bin\boost_program_options*  [win]
     name: libboost_program_options
   - files:
       - include/boost/program_options          [not win]
@@ -347,7 +347,7 @@ outputs:
   - files:
       - lib/libboost_random*     [not win]
       - Library\lib\libboost_random* [win]
-      - Library\bin\libboost_random* [win]
+      - Library\bin\boost_random* [win]
     name: libboost_random
     requirements:
       run:
@@ -372,7 +372,7 @@ outputs:
   - files:
       - lib/libboost_regex*     [not win]
       - Library\lib\libboost_regex* [win]
-      - Library\bin\libboost_regex* [win]
+      - Library\bin\boost_regex* [win]
     name: libboost_regex
     requirements:
       run:
@@ -400,9 +400,9 @@ outputs:
       - lib/libboost_serialization*      [not win]
       - lib/libboost_wserialization*     [not win]
       - Library\lib\libboost_serialization*  [win]
-      - Library\bin\libboost_serialization*  [win]
+      - Library\bin\boost_serialization*  [win]
       - Library\lib\libboost_wserialization* [win]
-      - Library\bin\libboost_wserialization* [win]
+      - Library\bin\boost_wserialization* [win]
     name: libboost_serialization
     requirements:
       run:
@@ -424,7 +424,7 @@ outputs:
   - files:
       - lib/libboost_signals*     [not win]
       - Library\lib\libboost_signals* [win]
-      - Library\bin\libboost_signals* [win]
+      - Library\bin\boost_signals* [win]
     name: libboost_signals
   - files:
       - include/boost/signals            [not win]
@@ -446,7 +446,7 @@ outputs:
   - files:
       - lib/libboost_system*     [not win]
       - Library\lib\libboost_system* [win]
-      - Library\bin\libboost_system* [win]
+      - Library\bin\boost_system* [win]
     name: libboost_system
   - files:
       - include/boost/system          [not win]
@@ -462,7 +462,7 @@ outputs:
   - files:
       - lib/libboost_thread*     [not win]
       - Library\lib\libboost_thread* [win]
-      - Library\bin\libboost_thread* [win]
+      - Library\bin\boost_thread* [win]
     name: libboost_thread
     requirements:
       run:
@@ -492,7 +492,7 @@ outputs:
   - files:
       - lib/libboost_timer*     [not win]
       - Library\lib\libboost_timer* [win]
-      - Library\bin\libboost_timer* [win]
+      - Library\bin\boost_timer* [win]
     name: libboost_timer
     requirements:
       run:
@@ -516,7 +516,7 @@ outputs:
   - files:
       - lib/libboost_type_erasure*     [not win]
       - Library\lib\libboost_type_erasure* [win]
-      - Library\bin\libboost_type_erasure* [win]
+      - Library\bin\boost_type_erasure* [win]
     name: libboost_type_erasure
     requirements:
       run:
@@ -538,9 +538,9 @@ outputs:
       - lib/libboost_unit_test_framework*      [not win]
       - lib/libboost_prg_exec_monitor*         [not win]
       - Library\lib\libboost_unit_test_framework*  [win]
-      - Library\bin\libboost_unit_test_framework*  [win]
+      - Library\bin\boost_unit_test_framework*  [win]
       - Library\lib\libboost_prg_exec_monitor*     [win]
-      - Library\bin\libboost_prg_exec_monitor*     [win]
+      - Library\bin\boost_prg_exec_monitor*     [win]
     name: libboost_test
     requirements:
       run:
@@ -562,7 +562,7 @@ outputs:
   - files:
       - lib/libboost_wave*     [not win]
       - Library\lib\libboost_wave* [win]
-      - Library\bin\libboost_wave* [win]
+      - Library\bin\boost_wave* [win]
     name: libboost_wave
     requirements:
       run:
@@ -952,8 +952,8 @@ outputs:
       - Library\include\boost\make_default.hpp [win]
       - Library\include\boost\make_shared.hpp [win]
       - Library\include\boost\make_unique.hpp [win]
-      - Library\include\boost\math [win]
-      - Library\include\boost\math_fwd.hpp [win]
+      # - Library\include\boost\math [win]
+      # - Library\include\boost\math_fwd.hpp [win]
       - Library\include\boost\mem_fn.hpp [win]
       # - Library\include\boost\memory_order.hpp [win]
       - Library\include\boost\metaparse [win]
@@ -1020,15 +1020,15 @@ outputs:
       - Library\include\boost\scoped_array.hpp [win]
       - Library\include\boost\scoped_ptr.hpp [win]
       - Library\include\boost\scope_exit.hpp [win]
-      - Library\include\boost\serialization [win]
+      # - Library\include\boost\serialization [win]
       - Library\include\boost\shared_array.hpp [win]
       - Library\include\boost\shared_container_iterator.hpp [win]
       - Library\include\boost\shared_ptr.hpp [win]
-      - Library\include\boost\signal.hpp [win]
-      - Library\include\boost\signals [win]
+      # - Library\include\boost\signal.hpp [win]
+      # - Library\include\boost\signals [win]
       - Library\include\boost\signals2 [win]
       - Library\include\boost\signals2.hpp [win]
-      - Library\include\boost\signals.hpp [win]
+      # - Library\include\boost\signals.hpp [win]
       - Library\include\boost\smart_ptr [win]
       - Library\include\boost\smart_ptr.hpp [win]
       - Library\include\boost\sort [win]
@@ -1042,8 +1042,8 @@ outputs:
       # - Library\include\boost\thread [win]
       # - Library\include\boost\thread.hpp [win]
       - Library\include\boost\throw_exception.hpp [win]
-      - Library\include\boost\timer [win]
-      - Library\include\boost\timer.hpp [win]
+      # - Library\include\boost\timer [win]
+      # - Library\include\boost\timer.hpp [win]
       - Library\include\boost\token_functions.hpp [win]
       - Library\include\boost\token_iterator.hpp [win]
       - Library\include\boost\tokenizer.hpp [win]
