--- a/bin/conda/boost-suite/meta.yaml
+++ b/bin/conda/boost-suite/meta.yaml
@@ -1,280 +1,314 @@
+
+package:
+  name: boost-suite
+  version: 1.61.0
+
+source:
+  fn: boost_1_61_0.tar.bz2
+  sha256: a547bd06c2fd9a71ba1d169d9cf0339da7ebf4753849a8f7d6fdb8feee99b640
+  url: http://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.tar.bz2
+
+build:
+  number: 0
+
+requirements:
+  build:
+    - python
+    - libtoolchain
+    - python
+    - icu 58.*          [unix]
+    - bzip2             [unix]
+    - zlib
+
 about:
   home: http://www.boost.org/
   license: Boost-1.0
   summary: Boost provides free peer-reviewed portable C++ source libraries.
-build:
-  number: 0
+
+test:
+  requires:
+    - libtoolchain
+    - python
+
+
 outputs:
   - files:
-    - lib/libboost_atomic*     [not win]
-    - Library\lib\libboost_atomic* [win]
-    - Library\bin\boost_atomic* [win]
+      - lib/libboost_atomic*         [not win]
+      - Library\lib\boost_atomic*    [win]
+      - Library\lib\libboost_atomic* [win]
+      - Library\bin\boost_atomic*    [win]
     name: libboost_atomic
     requirements:
       run_exports:
         - {{ pin_subpackage("libboost_atomic", exact=True) }}
   - files:
-    - lib/libboost_chrono*     [not win]
-    - Library\lib\libboost_chrono* [win]
-    - Library\bin\boost_chrono* [win]
+      - lib/libboost_chrono*         [not win]
+      - Library\lib\boost_chrono*    [win]
+      - Library\lib\libboost_chrono* [win]
+      - Library\bin\boost_chrono*    [win]
     name: libboost_chrono
     requirements:
       run:
-      - {{ pin_subpackage("libboost_system", exact=True) }}
+        - {{ pin_subpackage("libboost_system", exact=True) }}
       run_exports:
         - {{ pin_subpackage("libboost_chrono", exact=True) }}
   - files:
-    - lib/libboost_container*     [not win]
-    - Library\lib\libboost_container* [win]
-    - Library\bin\boost_container* [win]
+      - lib/libboost_container*         [not win]
+      - Library\lib\boost_container*    [win]
+      - Library\lib\libboost_container* [win]
+      - Library\bin\boost_container*    [win]
     name: libboost_container
     requirements:
       run_exports:
         - {{ pin_subpackage("libboost_container", exact=True) }}
   - files:
-    - lib/libboost_context*     [not win]
-    - Library\lib\libboost_context* [win]
-    - Library\bin\boost_context* [win]
+      - lib/libboost_context*         [not win]
+      - Library\lib\boost_context*    [win]
+      - Library\lib\libboost_context* [win]
+      - Library\bin\boost_context*    [win]
     name: libboost_context
   - files:
-    - include/boost [not win]
-    - Library\include\boost [win]
-    name: libboost_core-dev
-  - files:
-    - lib/libboost_coroutine*     [not win]
-    - Library\lib\libboost_coroutine* [win]
-    - Library\bin\boost_coroutine* [win]
+      - lib/libboost_coroutine*         [not win]
+      - Library\lib\boost_coroutine*    [win]
+      - Library\lib\libboost_coroutine* [win]
+      - Library\bin\boost_coroutine*    [win]
     name: libboost_coroutine
     requirements:
       run_exports:
         - {{ pin_subpackage("libboost_coroutine", exact=True) }}
       run:
-      - {{ pin_subpackage("libboost_system", exact=True) }}
-      - {{ pin_subpackage("libboost_chrono", exact=True) }}
-      - {{ pin_subpackage("libboost_thread", exact=True) }}
-      - {{ pin_subpackage("libboost_context", exact=True) }}
+        - {{ pin_subpackage("libboost_system", exact=True) }}
+        - {{ pin_subpackage("libboost_chrono", exact=True) }}
+        - {{ pin_subpackage("libboost_thread", exact=True) }}
+        - {{ pin_subpackage("libboost_context", exact=True) }}
   - files:
-    - lib/libboost_date_time*     [not win]
-    - Library\lib\libboost_date_time* [win]
-    - Library\bin\boost_date_time* [win]
+      - lib/libboost_date_time*     [not win]
+      - Library\lib\boost_date_time*    [win]
+      - Library\lib\libboost_date_time* [win]
+      - Library\bin\boost_date_time*   [win]
     name: libboost_date_time
     requirements:
       run_exports:
         - {{ pin_subpackage("libboost_date_time", exact=True) }}
   - files:
-    - lib/libboost_filesystem*     [not win]
-    - Library\lib\libboost_filesystem* [win]
-    - Library\bin\boost_filesystem* [win]
+      - lib/libboost_filesystem*         [not win]
+      - Library\lib\boost_filesystem*    [win]
+      - Library\lib\libboost_filesystem* [win]
+      - Library\bin\boost_filesystem*    [win]
     name: libboost_filesystem
     requirements:
       run_exports:
         - {{ pin_subpackage("libboost_filesystem", exact=True) }}
       run:
-      - {{ pin_subpackage("libboost_system", exact=True) }}
+        - {{ pin_subpackage("libboost_system", exact=True) }}
   - files:
-    - lib/libboost_graph*     [not win]
-    - Library\lib\libboost_graph* [win]
-    - Library\bin\boost_graph* [win]
+      - lib/libboost_graph*         [not win]
+      - Library\lib\boost_graph*    [win]
+      - Library\lib\libboost_graph* [win]
+      - Library\bin\boost_graph*    [win]
     name: libboost_graph
     requirements:
       run_exports:
         - {{ pin_subpackage("libboost_graph", exact=True) }}
       run:
-      - {{ pin_subpackage("libboost_regex", exact=True) }}
-      - icu
+        - {{ pin_subpackage("libboost_regex", exact=True) }}
+        - icu 58.*                  [linux]
   - files:
-    - lib/libboost_iostreams*     [not win]
-    - Library\lib\libboost_iostreams* [win]
-    - Library\bin\boost_iostreams* [win]
+      - lib/libboost_iostreams*         [not win]
+      - Library\lib\boost_iostreams*    [win]
+      - Library\lib\libboost_iostreams* [win]
+      - Library\bin\boost_iostreams*    [win]
     name: libboost_iostreams
   - files:
-    - lib/libboost_locale*     [not win]
-    - Library\lib\libboost_locale* [win]
-    - Library\bin\boost_locale* [win]
+      - lib/libboost_locale*         [not win]
+      - Library\lib\boost_locale*    [win]
+      - Library\lib\libboost_locale* [win]
+      - Library\bin\boost_locale*    [win]
     name: libboost_locale
     requirements:
       run_exports:
         - {{ pin_subpackage("libboost_locale", exact=True) }}
       run:
-      - {{ pin_subpackage("libboost_chrono", exact=True) }}
-      - {{ pin_subpackage("libboost_thread", exact=True) }}
-      - {{ pin_subpackage("libboost_system", exact=True) }}
-      - icu
+        - {{ pin_subpackage("libboost_chrono", exact=True) }}
+        - {{ pin_subpackage("libboost_thread", exact=True) }}
+        - {{ pin_subpackage("libboost_system", exact=True) }}
+        - icu 58.*                  [linux]
   - files:
-    - lib/libboost_log*     [not win]
-    - Library\lib\libboost_log* [win]
-    - Library\bin\boost_log* [win]
+      - lib/libboost_log*         [not win]
+      - Library\lib\boost_log*    [win]
+      - Library\lib\libboost_log* [win]
+      - Library\bin\boost_log*    [win]
     name: libboost_log
     requirements:
       run_exports:
         - {{ pin_subpackage("libboost_log", exact=True) }}
       run:
-      - {{ pin_subpackage("libboost_regex", exact=True) }}
-      - {{ pin_subpackage("libboost_filesystem", exact=True) }}
-      - {{ pin_subpackage("libboost_date_time", exact=True) }}
-      - {{ pin_subpackage("libboost_thread", exact=True) }}
-      - {{ pin_subpackage("libboost_chrono", exact=True) }}
-      - {{ pin_subpackage("libboost_system", exact=True) }}
-      - {{ pin_subpackage("libboost_atomic", exact=True) }}
-      - icu
+        - {{ pin_subpackage("libboost_regex", exact=True) }}
+        - {{ pin_subpackage("libboost_filesystem", exact=True) }}
+        - {{ pin_subpackage("libboost_date_time", exact=True) }}
+        - {{ pin_subpackage("libboost_thread", exact=True) }}
+        - {{ pin_subpackage("libboost_chrono", exact=True) }}
+        - {{ pin_subpackage("libboost_system", exact=True) }}
+        - {{ pin_subpackage("libboost_atomic", exact=True) }}
+        - icu 58.*                  [linux]
   - files:
-    - lib/libboost_math*     [not win]
-    - Library\lib\libboost_math* [win]
-    - Library\bin\boost_math* [win]
+      - lib/libboost_math*         [not win]
+      - Library\lib\boost_math*    [win]
+      - Library\lib\libboost_math* [win]
+      - Library\bin\boost_math*    [win]
     name: libboost_math
     requirements:
       run_exports:
         - {{ pin_subpackage("libboost_math", exact=True) }}
   - files:
-    - lib/libboost_program_options*      [not win]
-    - Library\lib\libboost_program_options*  [win]
-    - Library\bin\boost_program_options*  [win]
+      - lib/libboost_program_options*          [not win]
+      - Library\lib\boost_program_options*     [win]
+      - Library\lib\libboost_program_options*  [win]
+      - Library\bin\boost_program_options*     [win]
     name: libboost_program_options
     requirements:
       run_exports:
         - {{ pin_subpackage("libboost_program_options", exact=True) }}
   - files:
-    - lib/libboost_python*     [not win]
-    - Library\lib\libboost_python* [win]
-    - Library\bin\boost_python* [win]
+      - lib/libboost_python*         [not win]
+      - Library\lib\boost_python*    [win]
+      - Library\lib\libboost_python* [win]
+      - Library\bin\boost_python*    [win]
     name: libboost_python
     requirements:
       run_exports:
         - {{ pin_subpackage("libboost_python", exact=True) }}
         - python
       run:
-      - python
+        - python
   - files:
-    - lib/libboost_random*     [not win]
-    - Library\lib\libboost_random* [win]
-    - Library\bin\boost_random* [win]
+      - lib/libboost_random*         [not win]
+      - Library\lib\boost_random*    [win]
+      - Library\lib\libboost_random* [win]
+      - Library\bin\boost_random*    [win]
     name: libboost_random
     requirements:
       run_exports:
         - {{ pin_subpackage("libboost_random", exact=True) }}
       run:
-      - {{ pin_subpackage("libboost_system", exact=True) }}
+        - {{ pin_subpackage("libboost_system", exact=True) }}
   - files:
-    - lib/libboost_regex*     [not win]
-    - Library\lib\libboost_regex* [win]
-    - Library\bin\boost_regex* [win]
+      - lib/libboost_regex*         [not win]
+      - Library\lib\boost_regex*    [win]
+      - Library\lib\libboost_regex* [win]
+      - Library\bin\boost_regex*    [win]
     name: libboost_regex
     requirements:
       run_exports:
         - {{ pin_subpackage("libboost_regex", exact=True) }}
       run:
-      - icu
+        - icu 58.*                  [linux]
   - files:
-    - lib/libboost_serialization*      [not win]
-    - lib/libboost_wserialization*     [not win]
-    - Library\lib\libboost_serialization*  [win]
-    - Library\bin\boost_serialization*  [win]
-    - Library\lib\libboost_wserialization* [win]
-    - Library\bin\boost_wserialization* [win]
+      - lib/libboost_serialization*          [not win]
+      - lib/libboost_wserialization*         [not win]
+      - Library\lib\boost_serialization*    [win]
+      - Library\lib\libboost_serialization*  [win]
+      - Library\bin\boost_serialization*     [win]
+      - Library\lib\boost_wserialization*    [win]
+      - Library\lib\libboost_wserialization* [win]
+      - Library\bin\boost_wserialization*    [win]
     name: libboost_serialization
     requirements:
       run_exports:
         - {{ pin_subpackage("libboost_serialization", exact=True) }}
       run:
-      - icu
+        - icu 58.*                  [linux]
   - files:
-    - lib/libboost_signals*     [not win]
-    - Library\lib\libboost_signals* [win]
-    - Library\bin\boost_signals* [win]
+      - lib/libboost_signals*         [not win]
+      - Library\lib\boost_signals*    [win]
+      - Library\lib\libboost_signals* [win]
+      - Library\bin\boost_signals*    [win]
     name: libboost_signals
     requirements:
       run_exports:
         - {{ pin_subpackage("libboost_signals", exact=True) }}
   - files:
-    - lib/libboost_system*     [not win]
-    - Library\lib\libboost_system* [win]
-    - Library\bin\boost_system* [win]
+      - lib/libboost_system*         [not win]
+      - Library\lib\boost_system*    [win]
+      - Library\lib\libboost_system* [win]
+      - Library\bin\boost_system*    [win]
     name: libboost_system
     requirements:
       run_exports:
         - {{ pin_subpackage("libboost_system", exact=True) }}
   - files:
-    - lib/libboost_unit_test_framework*      [not win]
-    - lib/libboost_prg_exec_monitor*         [not win]
-    - Library\lib\libboost_unit_test_framework*  [win]
-    - Library\bin\boost_unit_test_framework*  [win]
-    - Library\lib\libboost_prg_exec_monitor*     [win]
-    - Library\bin\boost_prg_exec_monitor*     [win]
+      - lib/libboost_unit_test_framework*          [not win]
+      - lib/libboost_prg_exec_monitor*             [not win]
+      - Library\lib\boost_unit_test_framework*     [win]
+      - Library\lib\libboost_unit_test_framework*  [win]
+      - Library\bin\boost_unit_test_framework*     [win]
+      - Library\lib\boost_prg_exec_monitor*        [win]
+      - Library\lib\libboost_prg_exec_monitor*     [win]
+      - Library\bin\boost_prg_exec_monitor*        [win]
     name: libboost_test
     requirements:
       run_exports:
         - {{ pin_subpackage("libboost_test", exact=True) }}
       run:
-      - {{ pin_subpackage("libboost_timer", exact=True) }}
-      - {{ pin_subpackage("libboost_system", exact=True) }}
-      - {{ pin_subpackage("libboost_chrono", exact=True) }}
-      - icu
+        - {{ pin_subpackage("libboost_timer", exact=True) }}
+        - {{ pin_subpackage("libboost_system", exact=True) }}
+        - {{ pin_subpackage("libboost_chrono", exact=True) }}
+        - icu 58.*                  [linux]
   - files:
-    - lib/libboost_thread*     [not win]
-    - Library\lib\libboost_thread* [win]
-    - Library\bin\boost_thread* [win]
+      - lib/libboost_thread*         [not win]
+      - Library\lib\boost_thread*    [win]
+      - Library\lib\libboost_thread* [win]
+      - Library\bin\boost_thread*    [win]
     name: libboost_thread
     requirements:
       run_exports:
         - {{ pin_subpackage("libboost_thread", exact=True) }}
       run:
-      - {{ pin_subpackage("libboost_system", exact=True) }}
-      - {{ pin_subpackage("libboost_chrono", exact=True) }}
-      - {{ pin_subpackage("libboost_date_time", exact=True) }}
-      - icu
+        - {{ pin_subpackage("libboost_system", exact=True) }}
+        - {{ pin_subpackage("libboost_chrono", exact=True) }}
+        - {{ pin_subpackage("libboost_date_time", exact=True) }}
+        - icu 58.*                  [linux]
   - files:
-    - lib/libboost_timer*     [not win]
-    - Library\lib\libboost_timer* [win]
-    - Library\bin\boost_timer* [win]
+      - lib/libboost_timer*         [not win]
+      - Library\lib\boost_timer*    [win]
+      - Library\lib\libboost_timer* [win]
+      - Library\bin\boost_timer*    [win]
     name: libboost_timer
     requirements:
       run_exports:
         - {{ pin_subpackage("libboost_timer", exact=True) }}
       run:
-      - {{ pin_subpackage("libboost_chrono", exact=True) }}
-      - {{ pin_subpackage("libboost_system", exact=True) }}
+        - {{ pin_subpackage("libboost_chrono", exact=True) }}
+        - {{ pin_subpackage("libboost_system", exact=True) }}
   - files:
-    - lib/libboost_type_erasure*     [not win]
-    - Library\lib\libboost_type_erasure* [win]
-    - Library\bin\boost_type_erasure* [win]
+      - lib/libboost_type_erasure*         [not win]
+      - Library\lib\boost_type_erasure*    [win]
+      - Library\lib\libboost_type_erasure* [win]
+      - Library\bin\boost_type_erasure*    [win]
     name: libboost_type_erasure
     requirements:
       run_exports:
         - {{ pin_subpackage("libboost_type_erasure", exact=True) }}
       run:
-      - {{ pin_subpackage("libboost_thread", exact=True) }}
-      - {{ pin_subpackage("libboost_chrono", exact=True) }}
-      - {{ pin_subpackage("libboost_system", exact=True) }}
+        - {{ pin_subpackage("libboost_thread", exact=True) }}
+        - {{ pin_subpackage("libboost_chrono", exact=True) }}
+        - {{ pin_subpackage("libboost_system", exact=True) }}
   - files:
-    - lib/libboost_wave*     [not win]
-    - Library\lib\libboost_wave* [win]
-    - Library\bin\boost_wave* [win]
+      - lib/libboost_wave*         [not win]
+      - Library\lib\boost_wave*    [win]
+      - Library\lib\libboost_wave* [win]
+      - Library\bin\boost_wave*    [win]
     name: libboost_wave
     requirements:
       run_exports:
         - {{ pin_subpackage("libboost_wave", exact=True) }}
       run:
-      - {{ pin_subpackage("libboost_filesystem", exact=True) }}
-      - {{ pin_subpackage("libboost_thread", exact=True) }}
-      - {{ pin_subpackage("libboost_date_time", exact=True) }}
-      - {{ pin_subpackage("libboost_chrono", exact=True) }}
-      - {{ pin_subpackage("libboost_system", exact=True) }}
-package:
-  name: boost-suite
-  version: 1.61.0
-requirements:
-  build:
-  - python
-  - libtoolchain
-  - python
-  - icu 58.*          [unix]
-  - bzip2             [unix]
-  - zlib
-source:
-  fn: boost_1_61_0.tar.bz2
-  sha256: a547bd06c2fd9a71ba1d169d9cf0339da7ebf4753849a8f7d6fdb8feee99b640
-  url: http://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.tar.bz2
-test:
-  requires:
-  - libtoolchain
-  - python
+        - {{ pin_subpackage("libboost_filesystem", exact=True) }}
+        - {{ pin_subpackage("libboost_thread", exact=True) }}
+        - {{ pin_subpackage("libboost_date_time", exact=True) }}
+        - {{ pin_subpackage("libboost_chrono", exact=True) }}
+        - {{ pin_subpackage("libboost_system", exact=True) }}
+  - files:
+      - include/boost         [not win]
+      - Library\include\boost     [win]
+    name: libboost_core-dev
