--- a/appveyor.yml
+++ b/appveyor.yml
@@ -89,6 +89,19 @@ environment:
 
 matrix:
   fast_finish: true
+  allow_failures:
+    - platform: x86
+      CONDA_RECIPE: bin\conda\boost-suite
+      CONDA_VERSION: 2
+    - platform: x86
+      CONDA_RECIPE: bin\conda\boost-suite
+      CONDA_VERSION: 3
+    - platform: x64
+      CONDA_RECIPE: bin\conda\boost-suite
+      CONDA_VERSION: 2
+    - platform: x64
+      CONDA_RECIPE: bin\conda\boost-suite
+      CONDA_VERSION: 3
 
 install:
   - git clone https://github.com/StatisKit/appveyor-ci.git
