--- a/appveyor.yml
+++ b/appveyor.yml
@@ -56,9 +56,13 @@ environment:
       CONDA_VERSION: 2
     - CONDA_RECIPE: bin\conda\python-toolchain
       CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\boost-suite
+    - CONDA_RECIPE: bin\conda\libboost
       CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\boost-suite
+    - CONDA_RECIPE: bin\conda\libboost
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: bin\conda\boost-dev
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: bin\conda\boost-dev
       CONDA_VERSION: 3
     - CONDA_RECIPE: share\git\conda-tools\bin\conda\conda-tools
       CONDA_VERSION: 2
