--- a/travis.yml
+++ b/travis.yml
@@ -61,10 +61,16 @@ env:
     CONDA_VERSION=2
   - CONDA_RECIPE=bin/conda/python-toolchain
     CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/boost-suite
+  - CONDA_RECIPE=bin/conda/libboost
     CONDA_VERSION=2
     TRAVIS_WAIT=50
-  - CONDA_RECIPE=bin/conda/boost-suite
+  - CONDA_RECIPE=bin/conda/libboost
+    CONDA_VERSION=3
+    TRAVIS_WAIT=50
+  - CONDA_RECIPE=bin/conda/boost-dev
+    CONDA_VERSION=2
+    TRAVIS_WAIT=50
+  - CONDA_RECIPE=bin/conda/boost-dev
     CONDA_VERSION=3
     TRAVIS_WAIT=50
   - CONDA_RECIPE=share/git/conda-tools/bin/conda/conda-tools
